[gd_scene load_steps=10 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://PomoBlast/Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://PomoBlast/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://PomoBlast/PomoBlast.gd" type="Script" id=4]
[ext_resource path="res://PomoBlast/assets/StarField/StarFieldBackground.tscn" type="PackedScene" id=6]
[ext_resource path="res://PomoBlast/ScoreLabel.gd" type="Script" id=7]
[ext_resource path="res://PomoBlast/assets/Earth.png" type="Texture" id=9]
[ext_resource path="res://PomoBlast/assets/Saturn.png" type="Texture" id=10]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -24.3118, -9.39856, 0, 0, 0, 0, -43.0044, 2076.19, 0, 0, 0, 0, 3775.97, 2104.85, 0, 0, 0, 0, 3775.97, -25.9355, 0, 0, 0, 0, -22, -10.2254 )
}

[node name="Main" type="Node"]
pause_mode = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}
Mob = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="MobPath" type="Path2D" parent="."]
position = Vector2( -371.086, -203.633 )
scale = Vector2( 1.23043, 1.20941 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( -24.3118, -9.39856 )
rotation = 1.57976

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.139

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 1544, 982 )
scale = Vector2( 1, 0.977957 )

[node name="Sprite" type="Sprite" parent="StartPosition"]
position = Vector2( 1, -14.3156 )
scale = Vector2( 3.5, 2.03944 )
texture = ExtResource( 1 )

[node name="GameTimer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Pause" type="Button" parent="HUD"]
margin_left = 21.0
margin_top = 18.0
margin_right = 33.0
margin_bottom = 38.0
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="HUD"]
margin_left = 249.0
margin_top = 120.0
margin_right = 289.0
margin_bottom = 160.0

[node name="Label" type="Label" parent="HUD/Popup"]
margin_left = 45.0
margin_top = -34.0
margin_right = 96.0
margin_bottom = -20.0
text = "PAUSED"

[node name="Resume" type="Button" parent="HUD/Popup"]
margin_left = 37.0
margin_top = -9.0
margin_right = 101.0
margin_bottom = 11.0
text = "Resume"

[node name="ScoreLabel" type="Label" parent="HUD"]
margin_left = 106.0
margin_top = 23.0
margin_right = 146.0
margin_bottom = 37.0
text = "Score:"
align = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionPanel" type="Control" parent="HUD"]
margin_left = 504.0
margin_top = 2.0
margin_right = 1197.0
margin_bottom = 346.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HUD/QuestionPanel"]
margin_left = 166.0
margin_top = 11.0
margin_right = 588.0
margin_bottom = 107.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/QuestionPanel/Panel"]
margin_left = 16.0
margin_top = 11.0
margin_right = 83.0
margin_bottom = 25.0
text = "Question: "

[node name="QuestionLabel" type="Label" parent="HUD/QuestionPanel/Panel"]
margin_left = 15.0
margin_top = 28.0
margin_right = 396.0
margin_bottom = 85.0
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -99

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 0.2 )
motion_mirroring = Vector2( 3400, 2000 )

[node name="Earth" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 929, 672 )
scale = Vector2( 3.39375, 3.39375 )
texture = ExtResource( 9 )

[node name="Saturn" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 2381, 818 )
scale = Vector2( 1.872, 1.872 )
texture = ExtResource( 10 )

[node name="StarFieldBackground" parent="." instance=ExtResource( 6 )]

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="pressed" from="HUD/Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="HUD/Popup/Resume" to="." method="_on_Resume_pressed"]
